tests/e2e/semantics/absolute_expression.error
Error: syntax error in story at line 1, column 1

1|    a + b
      ^

E0101: Variable `a` has not been defined.
